<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cut_card_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >




        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:tabTextColor="@color/white"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="4dp"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TPO"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="4dp"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Student"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="4dp"
                />



        </com.google.android.material.tabs.TabLayout>



        <TextView
            android:id="@+id/textAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fristname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Fristname"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:boxStrokeWidth="4dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:textAlignment="center"
            tools:override="true"



            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Lastname"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:boxStrokeWidth="4dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:textAlignment="center"
            tools:override="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:boxStrokeWidth="4dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:textAlignment="center"
            tools:override="true"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"

            app:boxStrokeWidth="4dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:textAlignment="center"
            tools:override="true"
            app:endIconMode="password_toggle"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Confrimpassword_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confrimpassword"
            android:layout_marginHorizontal="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black"

            app:boxStrokeWidth="4dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:textAlignment="center"
            tools:override="true"
            app:endIconMode="password_toggle"


            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confrimpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="#FF3700B3"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/Signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RigesterNow"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
